# linkedin-auto-poster

./: .gitignore  pyproject.toml  requirements.txt
.github/workflows/: linkedin_bot.yml
app/: config.py  graph.py  linkedin.py  main.py  prompt.py  run.py  saver.py  tavily_client.py  tools.py  trend_research.py
